--- a/index.html
+++ b/index.html
@@ -43,11 +43,28 @@
       display: grid;
       grid-template-columns: 1.1fr 0.9fr;
       gap: 28px;
+      position: relative;
+      overflow: hidden;
+      isolation: isolate;
+    }
+    .card::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: url("./signage.jpg") center/cover no-repeat;
+      opacity: 0.2;
+      z-index: 0;
+      pointer-events: none;
+    }
+    .card > * {
+      position: relative;
+      z-index: 1;
     }
     header {
       display: flex;
+      flex-direction: column;
       align-items: center;
-      gap: 12px;
+      gap: 10px;
       margin-bottom: 18px;
     }
     .logo {
@@ -269,7 +286,7 @@
           <p>5, 6, 7, 9, 10, 11. sınıflar | Ücretsiz başvuru | Sınırlı kontenjan</p>
         </div>
         <p class="mini-copy">
-          Çocuğunuzun akademik yolculuğunu deneyimli öğretmenler, modern sınıflar ve güvenli kampüsümüzde destekliyoruz. Başvurunuz bize ulaşır ulaşmaz, danışmanlarımız sizi arayarak süreci şeffafça anlatır.
+          Akademik yolculuğunuzu deneyimli öğretmenler, modern sınıflar ve güvenli kampüsümüzde destekliyoruz. Başvurunuz alındıktan sonra sınav ve süreçle ilgili tüm bilgilere kurumumuzdan kolayca ulaşabilirsiniz.
         </p>
         <div class="advantages">
           <div class="adv">
