--- a/index.html
+++ b/index.html
@@ -60,6 +60,52 @@
       position: relative;
       z-index: 1;
     }
+    .modal-overlay {
+      position: fixed;
+      inset: 0;
+      background: rgba(0, 0, 0, 0.35);
+      display: grid;
+      place-items: center;
+      padding: 16px;
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity 0.2s ease;
+      z-index: 999;
+    }
+    .modal-overlay.show {
+      opacity: 1;
+      pointer-events: auto;
+    }
+    .modal {
+      background: #fff;
+      border-radius: 14px;
+      padding: 18px 20px;
+      width: min(360px, 100%);
+      box-shadow: 0 20px 40px rgba(0,0,0,0.18);
+      border: 1px solid var(--border);
+      text-align: center;
+    }
+    .modal h3 {
+      margin: 0 0 8px;
+      color: var(--primary);
+      font-size: 18px;
+    }
+    .modal p {
+      margin: 0 0 14px;
+      color: var(--text);
+      line-height: 1.5;
+      font-size: 14px;
+    }
+    .modal button {
+      background: var(--primary);
+      color: #fff;
+      border: none;
+      border-radius: 10px;
+      padding: 10px 14px;
+      font-weight: 700;
+      cursor: pointer;
+      width: 100%;
+    }
     header {
       display: flex;
       flex-direction: column;
@@ -186,6 +232,12 @@
       transition: transform 0.08s ease, box-shadow 0.12s ease;
       box-shadow: 0 10px 24px rgba(45, 75, 146, 0.18);
     }
+    .cta:disabled {
+      opacity: 0.7;
+      cursor: not-allowed;
+      transform: none;
+      box-shadow: none;
+    }
     .sessions {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
@@ -308,7 +360,7 @@
       </section>
 
       <section class="form-card" aria-label="Başvuru Formu">
-        <form>
+        <form id="application-form">
           <div>
             <label for="student-name">Öğrenci adı soyadı</label>
             <input id="student-name" name="student-name" type="text" placeholder="Örn: Elif Yılmaz" required>
@@ -392,7 +444,56 @@
         </form>
       </section>
     </main>
+    <div class="modal-overlay" role="dialog" aria-modal="true" aria-labelledby="modal-title" aria-describedby="modal-desc">
+      <div class="modal">
+        <h3 id="modal-title">Başvurunuz Başarıyla Alınmıştır</h3>
+        <p id="modal-desc">En kısa sürede sizinle iletişime geçeceğiz.</p>
+        <button type="button" id="modal-close">Kapat</button>
+      </div>
+    </div>
   </div>
+  <script>
+    const form = document.getElementById('application-form');
+    const overlay = document.querySelector('.modal-overlay');
+    const closeBtn = document.getElementById('modal-close');
+    const submitBtn = form.querySelector('.cta');
+    const endpoint = 'https://script.google.com/macros/s/AKfycbxOATBZ6PIbUb_zhS3rS4daycotPT1UflkcVoxxeYMqedi-sqiw6PeamH5hY78fpTRO/exec';
+
+    const openModal = () => {
+      overlay.classList.add('show');
+      closeBtn.focus();
+    };
+    const closeModal = () => overlay.classList.remove('show');
+
+    form.addEventListener('submit', async (e) => {
+      e.preventDefault();
+      submitBtn.disabled = true;
+      submitBtn.textContent = 'Gönderiliyor...';
+      const formData = new FormData(form);
+      try {
+        const res = await fetch(endpoint, {
+          method: 'POST',
+          headers: { Accept: 'application/json' },
+          body: formData,
+        });
+        if (!res.ok) throw new Error('Request failed');
+        form.reset();
+        openModal();
+      } catch (err) {
+        alert('Gönderilirken bir sorun oluştu. Lütfen tekrar deneyin.');
+      } finally {
+        submitBtn.disabled = false;
+        submitBtn.textContent = 'BAŞVURUYU GÖNDER';
+      }
+    });
+    closeBtn.addEventListener('click', closeModal);
+    overlay.addEventListener('click', (e) => {
+      if (e.target === overlay) closeModal();
+    });
+    window.addEventListener('keydown', (e) => {
+      if (e.key === 'Escape') closeModal();
+    });
+  </script>
 </body>
 </html>
 
