--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       position: absolute;
       inset: 0;
       background: url("./signage.jpg") center/cover no-repeat;
-      opacity: 0.2;
+      opacity: 0.15;
       z-index: 0;
       pointer-events: none;
     }
@@ -189,11 +189,13 @@
       font-size: 15px;
     }
     .form-card {
-      background: #f9fbff;
-      border: 1px solid var(--border);
+      background: #fff;
+      border: 1px solid #d9e0ef;
       border-radius: 18px;
       padding: 18px;
-      box-shadow: inset 0 1px 0 rgba(255,255,255,0.6);
+      box-shadow:
+        inset 0 1px 0 rgba(255,255,255,0.7),
+        0 10px 24px rgba(45, 75, 146, 0.12);
     }
     form {
       display: grid;
