--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
             <label for="email">E-posta (opsiyonel)</label>
             <input id="email" name="email" type="email" placeholder="E-posta adresi">
           </div>
-          <button class="cta" type="submit">BAŞVURUYU GÖNDER</button>
+          <button class="cta" type="submit">Bursluluk Sınavına Ücretsiz Kaydol</button>
           <div class="address-note">
             <strong>Sınavın Yapılacağı Kurumun Adresi:</strong><br>
             Yalı, Mithatpaşa Cd. No:497, 35310 Güzelbahçe/İzmir
