Simplify advantages section

--- a/index.html
+++ b/index.html
@@ -172,6 +172,10 @@
       gap: 12px;
       margin: 6px 0 14px;
     }
+    .advantages.single-adv {
+      grid-template-columns: 1fr;
+      justify-items: center;
+    }
     .adv {
       background: var(--card);
       border: 1px solid var(--border);
@@ -358,15 +362,9 @@
         <p class="mini-copy">
           Akademik yolculuğunuzu deneyimli öğretmenler, modern sınıflar ve güvenli kampüsümüzde destekliyoruz. Başvurunuz alındıktan sonra sınav ve süreçle ilgili tüm bilgilere kurumumuzdan kolayca ulaşabilirsiniz.
         </p>
-        <div class="advantages">
+        <div class="advantages single-adv">
           <div class="adv">
-            <p class="adv-title">%100’e varan burs imkânı</p>
-          </div>
-          <div class="adv">
-            <p class="adv-title">Deneyimli öğretmen kadrosu</p>
-          </div>
-          <div class="adv">
-            <p class="adv-title">Modern ve güvenli kampüs</p>
+            <p class="adv-title">%100’E VARAN BURS İMKÂNI</p>
           </div>
         </div>
         <div class="badges">
