Simplify hero subtitle

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
         </header>
         <div class="hero">
           <h1>2026 Bursluluk Sınavı Başvuruları Açıldı</h1>
-          <p>5, 6, 7, 9, 10, 11. sınıflar | Ücretsiz başvuru | Sınırlı kontenjan</p>
+          <p>5, 6, 7, 9, 10, 11. sınıflar</p>
         </div>
         <p class="mini-copy">
           Akademik yolculuğunuzu deneyimli öğretmenler, modern sınıflar ve güvenli kampüsümüzde destekliyoruz. Başvurunuz alındıktan sonra sınav ve süreçle ilgili tüm bilgilere kurumumuzdan kolayca ulaşabilirsiniz.
