Add shadow to advantage card

--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
       align-items: center;
       justify-content: center;
       text-align: center;
+      box-shadow: 0 10px 22px rgba(45, 75, 146, 0.12);
     }
     .adv-title {
       margin: 0;
