Enlarge advantage title

--- a/index.html
+++ b/index.html
@@ -189,9 +189,10 @@
     }
     .adv-title {
       margin: 0;
-      font-weight: 600;
+      font-weight: 700;
       color: var(--text);
-      font-size: 15px;
+      font-size: 18px;
+      letter-spacing: 0.3px;
     }
     .form-card {
       background: #fff;
