--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     .hero h1 {
       margin: 0 0 8px;
       font-size: clamp(26px, 4vw, 32px);
-      color: var(--primary);
+      color: var(--text);
     }
     .hero p {
       margin: 0 0 12px;
