Set hero and advantage colors to brand blue

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     .hero h1 {
       margin: 0 0 8px;
       font-size: clamp(26px, 4vw, 32px);
-      color: var(--text);
+      color: #2d4b92;
     }
     .hero p {
       margin: 0 0 12px;
@@ -190,7 +190,7 @@
     .adv-title {
       margin: 0;
       font-weight: 700;
-      color: var(--text);
+      color: #2d4b92;
       font-size: 18px;
       letter-spacing: 0.3px;
     }
